# nfs-server-2.3-5

./: BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  S60nfs  acinclude.m4  aclocal.m4  configure  configure.in
CYGWIN-PATCHES/: nfs-server-config  nfs-server.README  setup.hint
doc/: Makefile.in  exports.man  nfsd.man  ugidd.man
include/: auth.h  config.h.in  failsafe.h  fhandle.h  haccess.h  logging.h  mount.h  rpcmisc.h  signals.h  system.h  xmalloc.h  xrealpath.h
libnfs/: Makefile.in  auth.c  auth_clnt.c  auth_init.c  devtab.c  devtab.h  faccess.c  faccess.h  failsafe.c  fhandle.c  fileblocks.c  fsxid.c  fsxid.h  haccess.c  logging.c  mountlist.c  mountlist.h  nfsmounted.c  rpcmisc.c  signals.c  xmalloc.c  xmalloc_failed.c  xrealloc.c  xrealpath.c  xstrdup.c
mountd/: Makefile.in  dispatch.c  mountd.c  mountd.h  rmtab.c  rmtab.h
nfsd/: Makefile.in  dispatch.c  fsusage.c  fsusage.h  getattr.c  nfsd.c  nfsd.h  setattr.c  ugid_map.c
ugidd/: Makefile.in  ugidd.c
util/: Makefile.in  showmount.c
xdr/: Makefile.in  mount.x  nfs_prot.x
